--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,47 +10,51 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="@dimen/padding_16_dp">
+
         <ImageView
             android:id="@+id/weather_image_view"
             android:layout_width="80dp"
             android:layout_height="match_parent"
-            tools:src="@mipmap/ic_launcher"/>
+            tools:src="@mipmap/ic_launcher" />
+
         <LinearLayout
-            android:layout_marginStart="16dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_toEndOf="@id/weather_image_view">
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/weather_image_view"
+            android:orientation="vertical">
+
             <TextView
-                tools:text="Kharkiv"
-                android:textSize="18sp"
                 android:id="@+id/city_text_view"
                 android:layout_width="match_parent"
-                android:layout_weight="1"
                 android:layout_height="0dp"
+                android:layout_weight="1"
                 android:gravity="bottom"
                 android:paddingBottom="8dp"
-                />
+                android:textSize="18sp"
+                tools:text="Kharkiv" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/degrees_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    tools:text="18° C"
-                    android:textSize="32sp"/>
+                    android:textSize="32sp"
+                    tools:text="18° C" />
+
                 <TextView
-                    android:layout_marginLeft="10dp"
                     android:id="@+id/weather_description_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Sunny"
-                    android:textSize="14sp"/>
+                    android:layout_marginLeft="10dp"
+                    android:textSize="14sp"
+                    tools:text="Sunny" />
             </LinearLayout>
         </LinearLayout>
 
