--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,61 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <fragment
+        android:name="com.example.sergey.weatherapp.fragments.WeatherFragment"
+        android:id="@+id/main_weather_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="@dimen/padding_16_dp">
-
-        <ImageView
-            android:id="@+id/weather_image_view"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            tools:src="@mipmap/ic_launcher" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_toEndOf="@id/weather_image_view"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/city_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="bottom"
-                android:paddingBottom="8dp"
-                android:textSize="18sp"
-                tools:text="Kharkiv" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/degrees_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-light"
-                    android:textSize="32sp"
-                    tools:text="18° C" />
-
-                <TextView
-                    android:id="@+id/weather_description_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="14sp"
-                    tools:text="Sunny" />
-            </LinearLayout>
-        </LinearLayout>
-
-    </RelativeLayout>
-
+        android:padding="@dimen/padding_16_dp"
+        tools:layout="@layout/main_weather_fragment" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/words_recycler_view"
