--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="0dp"
         android:padding="@dimen/padding_16_dp"
         android:layout_weight="1"
+        android:paddingStart="42dp"
         />
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
