--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -7,7 +7,24 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="47dp">
+        android:layout_height="47dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/item_image_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <TextView
+            android:id="@+id/item_temperature_text_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/item_description_tex_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
 
     </LinearLayout>
@@ -15,10 +32,9 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
-
+        android:layout_marginRight="8dp"
+        android:background="#dadada" />
 
 
 </LinearLayout>
