--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:paddingStart="42dp"
         />
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/weather_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
