--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="4"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <FrameLayout
         android:id="@+id/main_weather_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="@dimen/padding_16_dp"
-        android:layout_weight="1"
-        android:paddingStart="42dp"
+        android:layout_weight="0.7"
+        android:paddingStart="22dp"
         />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weather_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="3.3"
         />
 </LinearLayout>
