--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -3,11 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingEnd="18dp"
         android:paddingStart="12dp"
@@ -18,21 +19,25 @@
             android:id="@+id/item_image_view"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_weight="0.55" />
+            android:layout_weight="0.55"
+            tools:src="@color/colorPrimaryDark"
+            />
 
         <TextView
             android:id="@+id/item_temperature_text_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="0.6" />
+            android:layout_weight="0.6"
+            tools:text="Thursday \n 18-19 C"/>
 
         <TextView
             android:id="@+id/item_description_tex_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="tools text text text"/>
 
 
     </LinearLayout>
