--- a/app/src/main/res/xml/preference_screen.xml
+++ b/app/src/main/res/xml/preference_screen.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <CheckBoxPreference android:summaryOff="No"
+    <CheckBoxPreference
         android:defaultValue="true"
-        android:key="dummy"
-        android:summaryOn="yes">
+        android:key="degrees"
+        android:summaryOff="Fahrenheit"
+        android:summaryOn="Celcius">
 
     </CheckBoxPreference>
 </PreferenceScreen>
