--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/primary_color"
+        android:background="@color/primary"
         app:elevation="0dp"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ToolbarColoredBackArrow"
@@ -20,6 +20,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.7"
         android:paddingStart="22dp"
+        android:background="@drawable/myrect"
+        android:elevation="2dp"
         />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/weather_recycler_view"
